[package]
name = "pwned-rs"
version = "0.2.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for locally checking existing of passwords in the leak files provided by Troy Hunt."

[[bin]]
name = "pwned-rs"
path = "src/bin/main.rs"

[dependencies]
chrono = "*"
clap = {version = "*", features = ["yaml"]}
fern = "*"
indicatif = "*"
lazy_static = "*"
log = "*"
rpassword = "*"
rust-crypto = "*"
# secstr = {version = "*", features = ["libsodium-sys"]}
