[package]
name = "pwned-rs"
version = "0.3.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for locally checking existing of passwords in the leak files provided by Troy Hunt."

[[bin]]
name = "pwned-rs"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4"
clap = {version = "2.33", features = ["yaml"]}
fern = "0.5"
indicatif = "0.14"
log = "0.4"
rpassword = "4.0"
sha1 = "0.6"
# secstr = {version = "*", features = ["libsodium-sys"]}
