[package]
name = "pwned-rs"
version = "0.3.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for locally checking existing of passwords in the leak files provided by Troy Hunt."

[[bin]]
name = "pwned-rs"
path = "src/bin/main.rs"

[dependencies.chrono]
version = "0.4"

[dependencies.clap]
version = "2.33"
features = ["yaml"]

[dependencies.fern]
version = "0.6"

[dependencies.log]
version = "0.4"

[dependencies.indicatif]
version = "0.15"

[dependencies.rpassword]
version = "5.0"

[dependencies.rust-crypto]
version = "0.2"

#[dependencies.secstr]
#version = "0.4"
#features = ["libsodium-sys"]
